manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ccc
  labels:
    app.kubernetes.io/part-of: ccc
